--- a/refs.bib
+++ b/refs.bib
@@ -54,3 +54,20 @@
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+
+@article{Rae_2019,
+	author    = {Jack W. Rae and
+	Anna Potapenko and
+	Siddhant M. Jayakumar and
+	Timothy P. Lillicrap},
+	title     = {Compressive Transformers for Long-Range Sequence Modelling},
+	journal   = {CoRR},
+	volume    = {abs/1911.05507},
+	year      = {2019},
+	url       = {http://arxiv.org/abs/1911.05507},
+	eprinttype = {arXiv},
+	eprint    = {1911.05507},
+	timestamp = {Mon, 02 Dec 2019 13:44:01 +0100},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-1911-05507.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
