--- a/H_cluster.tex
+++ b/H_cluster.tex
@@ -3,6 +3,7 @@
 \usepackage{soul}
 \usepackage{dsfont}
 \usepackage{amsmath,amssymb,graphicx,bm,color,mathrsfs,verbatim,epstopdf,dcolumn,cancel}
+\usepackage{bbold}
 
 \usepackage[fleqn]{mathtools}
 
